options renamed and minor improvements

--- a/default/app.conf
+++ b/default/app.conf
@@ -7,7 +7,7 @@ is_configured = 0
 
 [ui]
 is_visible = 1
-label = Support Addon for hyperbaseline
+label = Support Add-on for hyperbaseline
 
 [launcher]
 author = Christoph Dittmann
@@ -15,4 +15,4 @@ description = SA-hyperbaseline contains custom search commands and key-value-sto
 version = 1.0
 
 [package]
-id = sa_hyperbaseline
+id = SA_hyperbaseline
