--- a/default/logging.conf
+++ b/default/logging.conf
@@ -4,7 +4,7 @@
 #     [Configuration file format](http://goo.gl/K6edZ8)
 #
 [loggers]
-keys = root, FillBaselineCommand
+keys = root, FillBaselineCommand, CompareToBaselineCommand
 
 [logger_root]
 level = WARNING   ; Default: WARNING
@@ -16,15 +16,21 @@ level = NOTSET    ; Default: WARNING
 handlers = file   ; Default: stderr
 propagate = 0     ; Default: 1
 
+[logger_CompareToBaselineCommand]
+qualname = CompareToBaselineCommand
+level = NOTSET    ; Default: WARNING
+handlers = file   ; Default: stderr
+propagate = 0     ; Default: 1
+
 [handlers]
 # See [logging.handlers](http://goo.gl/9aoOx)
 keys=file, stderr
 
 [handler_file]
-# Select this handler to log events to $SPLUNK_HOME/etc/apps/SA-hyperbaseline/sa_hyperbaseline.log
+# Select this handler to log events to $SPLUNK_HOME/etc/apps/SA-hyperbaseline/SA_hyperbaseline.log
 class = logging.FileHandler
 level = NOTSET
-args = ('sa_hyperbaseline.log', 'a', 'utf-8', True)
+args = ('SA_hyperbaseline.log', 'a', 'utf-8', True)
 formatter = search_command
 
 [handler_stderr]
