--- a/default/transforms.conf
+++ b/default/transforms.conf
@@ -1,4 +1,4 @@
-[hyperbaseline_kv_lookup]
+[hyperbaseline_lookup]
 external_type = kvstore
-collection = hyperbaseline_kv
+collection = hyperbaseline
 fields_list = _key, config_name, variable, metric, min, pct25, mean, median, pct75, max, stdev
