changed default logging behaviour to stderr

--- a/default/logging.conf
+++ b/default/logging.conf
@@ -13,25 +13,18 @@ handlers = stderr ; Default: stderr
 [logger_FillBaselineCommand]
 qualname = FillBaselineCommand
 level = NOTSET    ; Default: WARNING
-handlers = file   ; Default: stderr
+handlers = stderr ; Default: stderr
 propagate = 0     ; Default: 1
 
 [logger_CompareToBaselineCommand]
 qualname = CompareToBaselineCommand
 level = NOTSET    ; Default: WARNING
-handlers = file   ; Default: stderr
+handlers = stderr ; Default: stderr
 propagate = 0     ; Default: 1
 
 [handlers]
 # See [logging.handlers](http://goo.gl/9aoOx)
-keys=file, stderr
-
-[handler_file]
-# Select this handler to log events to $SPLUNK_HOME/etc/apps/SA-hyperbaseline/SA_hyperbaseline.log
-class = logging.FileHandler
-level = NOTSET
-args = ('SA_hyperbaseline.log', 'a', 'utf-8', True)
-formatter = search_command
+keys = stderr
 
 [handler_stderr]
 # Select this handler to log events to $SPLUNK_HOME/var/log/splunk/splunkd.log
