--- a/default/app.conf
+++ b/default/app.conf
@@ -15,4 +15,4 @@ description = SA-hyperbaseline contains custom search commands and key-value-sto
 version = 1.0
 
 [package]
-id = SA_hyperbaseline
+id = SA-hyperbaseline
